<resources>
    <string name="app_name">FinalProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="back">back</string>
    <string name="vector">vector</string>
    <string name="vertical_Line">line</string>
    <string name="poloska">poloska</string>
    <string name="addtodo">ADD TODO</string>
    <string name="todoadd">TODO TITLE</string>
    <string name="titleadd">TODO SUB TITLE</string>
    <string name="welcome">WELCOME</string>
    <string name="fab_description">fab</string>
    <string name="day">SOMEDAY</string>
    <string name="button_todo_lined"><u>TODO</u></string>
    <string name="button_done_lined"><u>DONE</u></string>
    <string name="button_todo">TODO</string>
    <string name="button_done">DONE</string>
    <string name="todo_title">TODO TITLE</string>
    <string name="todo_subtitle">TODO SUBTITLE</string>
    <string name="login">LOGIN</string>
    <string name="password">PASSWORD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name ="question">Have questions?</string>
    <string name="error">Find error?</string>
    <string name="mode">Dark mode</string>

    <string-array name="time">
        <item>9:00–10:00</item>
        <item>10:00–11:00</item>
        <item>11:00–12:00</item>
        <item>12:00–13:00</item>
        <item>13:00–14:00</item>
        <item>14:00–15:00</item>
        <item>15:00–16:00</item>
        <item>16:00–17:00</item>
        <item>17:00–18:00</item>
    </string-array>

    <string-array name="codes">
        <item>MDE101</item>
        <item>MDE505</item>
        <item>CSS108</item>
    </string-array>
</resources>