<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
<!--    tools:context=".model.RVAdapter"-->

    <View
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/main"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </View>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/main">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameOfDay">

                <Button
                    android:id="@+id/buttonTODO"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/jost_bold"
                    android:letterSpacing="0"
                    android:text="@string/button_todo"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:paddingEnd="20dp"/>

                <ImageView
                    android:id="@+id/imageVerticalLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/vertical_Line"
                    app:srcCompat="@drawable/vertical_line" />

                <Button
                    android:id="@+id/buttonDONE"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/jost_bold"
                    android:letterSpacing="0"
                    android:text="@string/button_done"
                    android:textColor="@color/gray_Button"
                    android:textSize="30sp"
                    android:paddingStart="20dp"/>
            </com.google.android.material.button.MaterialButtonToggleGroup>


            <TextView
                android:id="@+id/nameOfDay"
                android:layout_width="196dp"
                android:layout_height="60dp"

                android:layout_marginBottom="50dp"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:text="@string/day"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"

                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageVectorBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/vector"

                app:layout_constraintBottom_toBottomOf="@+id/nameOfDay"
                app:layout_constraintEnd_toStartOf="@+id/nameOfDay"
                app:layout_constraintTop_toTopOf="@+id/nameOfDay"
                app:srcCompat="@drawable/vector_back" />

            <ImageView
                android:id="@+id/imageVectorForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/vector"

                app:layout_constraintBottom_toBottomOf="@+id/nameOfDay"
                app:layout_constraintStart_toEndOf="@+id/nameOfDay"
                app:layout_constraintTop_toTopOf="@+id/nameOfDay"
                app:srcCompat="@drawable/vector_forward" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="348dp"
            android:layout_height="76dp"
            android:background="@drawable/rounded_corner_mild"
            android:elevation="6dp"
            android:layout_marginTop="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="250dp"
                android:layout_height="56dp"
                android:layout_marginStart="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/todo_title"

                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    >

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todo_subtitle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/gray_Button"
                    android:textSize="20sp"
                    >

                </TextView>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:buttonTint="@color/white"
                android:scaleX="2.4"
                android:scaleY="2.4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </CheckBox>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/rvMain"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="450dp"-->
<!--        android:layout_marginTop="30dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/cardView"-->
<!--        android:scrollbars="vertical"-->
<!--        app:layoutManager="LinearLayoutManager"/>-->


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/fab_description"

        android:layout_marginEnd="26dp"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:backgroundTint="@color/forbuttons"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@color/white"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>