<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="199dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="420dp"
            android:fontFamily="@font/jost_bold"
            android:gravity="center"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/logback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:contentDescription="background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_scedule" />

        <ImageView
            android:id="@+id/logicon"
            android:layout_width="69dp"
            android:layout_height="60dp"
            android:layout_alignTop="@+id/logback"
            android:layout_alignBottom="@+id/logback"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="logicon"
            app:layout_constraintBottom_toTopOf="@+id/loginInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/logback"
            app:srcCompat="@drawable/ic_acc_icon" />


        <ImageView
            android:id="@+id/pasword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/logback"
            android:layout_alignTop="@+id/logback"
            android:layout_alignEnd="@+id/logback"
            android:layout_alignBottom="@+id/logback"
            android:layout_marginBottom="100dp"
            android:contentDescription="passwordInput"
            app:layout_constraintBottom_toBottomOf="@+id/logback"
            app:layout_constraintEnd_toEndOf="@+id/logback"
            app:layout_constraintStart_toStartOf="@+id/logback"
            app:layout_constraintTop_toBottomOf="@+id/loginInput"
            app:srcCompat="@drawable/ic_pss" />


        <ImageView
            android:id="@+id/loginInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/logback"
            android:layout_alignTop="@+id/logback"
            android:layout_alignEnd="@+id/logback"
            android:layout_alignBottom="@+id/logback"
            android:layout_marginBottom="290dp"
            android:contentDescription="loginInput"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/logback"
            app:layout_constraintStart_toStartOf="@+id/logback"
            app:layout_constraintTop_toTopOf="@+id/logback"
            app:srcCompat="@drawable/ic_pss" />


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="LOGIN"
            app:layout_constraintBottom_toBottomOf="@+id/logback"
            app:layout_constraintEnd_toEndOf="@+id/logback"
            app:layout_constraintStart_toStartOf="@+id/logback"
            app:layout_constraintTop_toTopOf="@+id/logback"
            app:layout_constraintVertical_bias="0.92" />


        <EditText
            android:id="@+id/login"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@color/transperet"
            android:fontFamily="@font/jost_semibold"
            android:minHeight="48dp"
            android:hint="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/loginInput"
            app:layout_constraintEnd_toEndOf="@+id/loginInput"
            app:layout_constraintStart_toStartOf="@+id/loginInput"
            app:layout_constraintTop_toTopOf="@+id/loginInput" />

        <EditText
            android:id="@+id/password"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:height="48dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/pasword"
            app:layout_constraintEnd_toEndOf="@+id/pasword"
            app:layout_constraintStart_toStartOf="@+id/pasword"
            app:layout_constraintTop_toTopOf="@+id/pasword" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</RelativeLayout>